# api/swagger-ui/resequip.swagger.json
@@ -135,6 +135,12 @@
         },
         "parameters": [
           {
+            "name": "person_id",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
             "name": "search",
             "in": "query",
             "required": false,
